--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">Pom</button>
-        <button class="tecla tecla_clap">Clap</button>
-        <button class="tecla tecla_tim">Tim</button>
+        <button class="tecla tecla_leão">Pom</button>
+        <button class="tecla tecla_babuíno">Clap</button>
+        <button class="tecla tecla_hiena">Tim</button>
 
-        <button class="tecla tecla_puff">Puff</button>
-        <button class="tecla tecla_splash">Splash</button>
-        <button class="tecla tecla_toim">Toim</button>
+        <button class="tecla tecla_girafa">Puff</button>
+        <button class="tecla tecla_hipopótamo">Splash</button>
+        <button class="tecla tecla_leopardo">Toim</button>
 
-        <button class="tecla tecla_psh">Psh</button>
-        <button class="tecla tecla_tic">Tic</button>
-        <button class="tecla tecla_tom">Tom</button>
+        <button class="tecla tecla_zebra">Psh</button>
+        <button class="tecla tecla_búfalo">Tic</button>
+        <button class="tecla tecla_elefante">Tom</button>
     </section>
 
     <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
