--- a/index.html
+++ b/index.html
@@ -24,28 +24,28 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_leão">Pom</button>
-        <button class="tecla tecla_babuíno">Clap</button>
-        <button class="tecla tecla_hiena">Tim</button>
+        <button class="tecla tecla_leão">leão</button>
+        <button class="tecla tecla_babuíno">babuíno</button>
+        <button class="tecla tecla_hiena">hiena</button>
 
-        <button class="tecla tecla_girafa">Puff</button>
-        <button class="tecla tecla_hipopótamo">Splash</button>
-        <button class="tecla tecla_leopardo">Toim</button>
+        <button class="tecla tecla_girafa">girafa</button>
+        <button class="tecla tecla_hipopótamo">hipopótamo</button>
+        <button class="tecla tecla_leopardo">leopardo</button>
 
-        <button class="tecla tecla_zebra">Psh</button>
-        <button class="tecla tecla_búfalo">Tic</button>
-        <button class="tecla tecla_elefante">Tom</button>
+        <button class="tecla tecla_zebra">zebra</button>
+        <button class="tecla tecla_búfalo">búfalo</button>
+        <button class="tecla tecla_elefante">elefante</button>
     </section>
 
-    <audio src="sounds/keyq.wav" id="som_tecla_pom"></audio>
-    <audio src="sounds/keyw.wav" id="som_tecla_clap"></audio>
-    <audio src="sounds/keye.wav" id="som_tecla_tim"></audio>
-    <audio src="sounds/keya.wav" id="som_tecla_puff"></audio>
-    <audio src="sounds/keys.wav" id="som_tecla_splash"></audio>
-    <audio src="sounds/keyd.wav" id="som_tecla_toim"></audio>
-    <audio src="sounds/keyz.wav" id="som_tecla_psh"></audio>
-    <audio src="sounds/keyx.wav" id="som_tecla_tic"></audio>
-    <audio src="sounds/keyc.wav" id="som_tecla_tom"></audio>
+    <audio src="sounds/keyq.wav" id="som_tecla_leão"></audio>
+    <audio src="sounds/keyw.wav" id="som_tecla_babuíno"></audio>
+    <audio src="sounds/keye.wav" id="som_tecla_hiena"></audio>
+    <audio src="sounds/keya.wav" id="som_tecla_girafa"></audio>
+    <audio src="sounds/keys.wav" id="som_tecla_hipopótamo"></audio>
+    <audio src="sounds/keyd.wav" id="som_tecla_leopardo"></audio>
+    <audio src="sounds/keyz.wav" id="som_tecla_zebra"></audio>
+    <audio src="sounds/keyx.wav" id="som_tecla_bufalo"></audio>
+    <audio src="sounds/keyc.wav" id="som_tecla_elefante"></audio>
     <script src="main.js"></script>
 
 </body>
