--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button class="tecla tecla_elefante">elefante</button>
     </section>
 
-    <audio src="sounds/keyq.wav" id="som_tecla_leão"></audio>
+    <audio src="sons/o Rugir do #Leão #valdineyliberatto_fohCRORLGwM (1).mp3" id="som_tecla_leão"></audio>
     <audio src="sounds/keyw.wav" id="som_tecla_babuíno"></audio>
     <audio src="sounds/keye.wav" id="som_tecla_hiena"></audio>
     <audio src="sounds/keya.wav" id="som_tecla_girafa"></audio>
