--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_leão">leão</button>
+        <button class="tecla tecla_leão">Leão</button>
         <button class="tecla tecla_babuíno">babuíno</button>
         <button class="tecla tecla_hiena">hiena</button>
 
