--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_leão">Leão</button>
+        <button class="tecla tecla_leão">eão</button>
         <button class="tecla tecla_babuíno">babuíno</button>
         <button class="tecla tecla_hiena">hiena</button>
 
@@ -38,14 +38,14 @@
     </section>
 
     <audio src="sons/o Rugir do #Leão #valdineyliberatto_fohCRORLGwM (1).mp3" id="som_tecla_leão"></audio>
-    <audio src="sounds/keyw.wav" id="som_tecla_babuíno"></audio>
-    <audio src="sounds/keye.wav" id="som_tecla_hiena"></audio>
-    <audio src="sounds/keya.wav" id="som_tecla_girafa"></audio>
-    <audio src="sounds/keys.wav" id="som_tecla_hipopótamo"></audio>
-    <audio src="sounds/keyd.wav" id="som_tecla_leopardo"></audio>
-    <audio src="sounds/keyz.wav" id="som_tecla_zebra"></audio>
-    <audio src="sounds/keyx.wav" id="som_tecla_bufalo"></audio>
-    <audio src="sounds/keyc.wav" id="som_tecla_elefante"></audio>
+    <audio src="sons/BABUÍNO _ Esse é o barulho do babuíno, conheça o som de Babuíno.mp3" id="som_tecla_babuíno"></audio>
+    <audio src="sons/HIENA RINDO - VIDA SELVAGEM_kafzSkuk5RI.mp3" id="som_tecla_hiena"></audio>
+    <audio src="sons/Som da Girafa - Giraffe sound_-2awSgin2x4.mp3" id="som_tecla_girafa"></audio>
+    <audio src="sons/Som de Hipopótamo - Dicas e Fatos Sobre Hipopótamos - Som dos Animais_RvOzC_7mMNE.mp3" id="som_tecla_hipopótamo"></audio>
+    <audio src="sons/Som de leopardo rugindo, rugido do leopardo.mp3" id="som_tecla_leopardo"></audio>
+    <audio src="sons/Som de zebra_4XeFhUDyxXc (1).mp3" id="som_tecla_zebra"></audio>
+    <audio src="sons/SOM DO BÚFALO_m2cQ6Yj9tG4.mp3" id="som_tecla_bufalo"></audio>
+    <audio src="sons/Som Do Elefante  -  Barulho do Elefante - Elefante_of1wNvVfIwM.mp3" id="som_tecla_elefante"></audio>
     <script src="main.js"></script>
 
 </body>
