--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button class="tecla tecla_elefante">elefante</button>
     </section>
 
-    <audio src="sons/o Rugir do #Leão #valdineyliberatto_fohCRORLGwM (1).mp3" id="som_tecla_leão"></audio>
+    <audio src="sons/o Rugir do #Leão #valdineyliberatto_fohCRORLGwM (1).mp3" id="som_tecla_pom"></audio>
     <audio src="sons/BABUÍNO _ Esse é o barulho do babuíno, conheça o som de Babuíno.mp3" id="som_tecla_babuíno"></audio>
     <audio src="sons/HIENA RINDO - VIDA SELVAGEM_kafzSkuk5RI.mp3" id="som_tecla_hiena"></audio>
     <audio src="sons/Som da Girafa - Giraffe sound_-2awSgin2x4.mp3" id="som_tecla_girafa"></audio>
