--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section class="teclado">
         <button class="tecla tecla_pom">Leão</button>
-        <button class="tecla tecla_babuíno">babuíno</button>
+        <button class="tecla tecla_clap">babuíno</button>
         <button class="tecla tecla_hiena">hiena</button>
 
         <button class="tecla tecla_girafa">girafa</button>
