--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button class="tecla tecla_pom">Leão</button>
+        <button class="tecla tecla_pom">leão</button>
         <button class="tecla tecla_clap">babuíno</button>
-        <button class="tecla tecla_hiena">hiena</button>
+        <button class="tecla tecla_tim">hiena</button>
 
-        <button class="tecla tecla_girafa">girafa</button>
-        <button class="tecla tecla_hipopótamo">hipopótamo</button>
-        <button class="tecla tecla_leopardo">leopardo</button>
+        <button class="tecla tecla_puff">girafa</button>
+        <button class="tecla tecla_splash">hipopótamo</button>
+        <button class="tecla tecla_toim">leopardo</button>
 
-        <button class="tecla tecla_zebra">zebra</button>
-        <button class="tecla tecla_búfalo">búfalo</button>
-        <button class="tecla tecla_elefante">elefante</button>
+        <button class="tecla tecla_psh">zebra</button>
+        <button class="tecla tecla_tic">búfalo</button>
+        <button class="tecla tecla_tom">elefante</button>
     </section>
 
     <audio src="sons/o Rugir do #Leão #valdineyliberatto_fohCRORLGwM (1).mp3" id="som_tecla_pom"></audio>
