--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-    <h1>Alura Midi</h1>
+    <h1>Animais da Africa</h1>
 
     <section class="teclado">
         <button class="tecla tecla_pom">leão</button>
@@ -46,7 +46,7 @@
     <audio src="sons/Som de zebra_4XeFhUDyxXc (1).mp3" id="som_tecla_zebra"></audio>
     <audio src="sons/SOM DO BÚFALO_m2cQ6Yj9tG4.mp3" id="som_tecla_bufalo"></audio>
     <audio src="sons/Som Do Elefante  -  Barulho do Elefante - Elefante_of1wNvVfIwM.mp3" id="som_tecla_elefante"></audio>
-    
+
     <script src="main.js"></script>
 
 </body>
